# TransportationFAPI

./: main.py  pyproject.toml
Auto/: __init__.py  crud.py  schemas.py  views.py
Driver/: __init__.py  crud.py  schemas.py  views.py
Model/: crud.py  schemas.py  views.py
RepairList/: __init__.py  crud.py  schemas.py  views.py
Road/: __init__.py  crud.py  schemas.py  views.py
core/: config.py  utils.py
core/base/: db_helper.py
core/base/models/: __init__.py  auto.py  auto_model.py  driver.py  repair_list.py  road.py
